# canon-attestation-hub

./: .env.example  Cargo.toml  README.md  docker-compose.yml
backend/: Dockerfile  package.json
backend/src/: index.ts
backend/src/routes/: attestation.ts  prover.ts
backend/src/stellar/: client.ts
contracts/attestation-registry/: Cargo.toml
contracts/attestation-registry/src/: lib.rs
frontend/: next.config.js  package.json
frontend/src/app/: error.module.css  error.tsx  globals.css  layout.tsx  not-found.module.css  not-found.tsx  page.module.css  page.tsx
frontend/src/components/: AttestationList.module.css  AttestationList.tsx  SubmitForm.module.css  SubmitForm.tsx
prover/: Cargo.toml
prover/examples/: manifest.json
prover/src/: lib.rs  main.rs
