[package]
name = "canon-prover"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "canon-prover"
path = "src/main.rs"

[lib]
name = "canon_prover"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
sha2 = "0.10"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"

[profile.release]
opt-level = 3
lto = true
